Subo cambios en index.html
Cree la estructura de la pagina principal

--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Este es mi final</h1>
+    <h1>PC-Games</h1>
+    <hr>
+    <h2>nav-bar</h2>
+    <hr>
+    <p>Ofertas</p>
+    <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <p>Mas vendidos</p>
+    <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <footer>
+        <p>Redes</p>
+        <p>Info legal</p>
+        <p>Boton de arrepentimiento</p>
+        <p>Hecho por Cristián Cravero(TP Final Web I Ulp)</p>
+    </footer>
+
 </body>
 </html>
